--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+<script type="text/javascript" src=""></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
